@@ -8,9 +8,12 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Reader;
+import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
 import java.io.Writer;
 import java.nio.CharBuffer;
@@ -25,6 +28,7 @@ import com.xiaoleilu.hutool.util.StrUtil;
 
 /**
  * IO工具类
+ * 
  * @author xiaoleilu
  *
  */
@@ -35,10 +39,10 @@ public class IoUtil {
 	/** 数据流末尾 */
 	public static final int EOF = -1;
 
-	//-------------------------------------------------------------------------------------- Copy start
+	// -------------------------------------------------------------------------------------- Copy start
 	/**
-	 * 将Reader中的内容复制到Writer中
-	 * 使用默认缓存大小
+	 * 将Reader中的内容复制到Writer中 使用默认缓存大小
+	 * 
 	 * @param reader Reader
 	 * @param writer Writer
 	 * @return 拷贝的字节数
@@ -47,9 +51,10 @@ public class IoUtil {
 	public static long copy(Reader reader, Writer writer) throws IOException {
 		return copy(reader, writer, DEFAULT_BUFFER_SIZE);
 	}
-	
+
 	/**
 	 * 将Reader中的内容复制到Writer中
+	 * 
 	 * @param reader Reader
 	 * @param writer Writer
 	 * @param bufferSize 缓存大小
@@ -59,9 +64,10 @@ public class IoUtil {
 	public static long copy(Reader reader, Writer writer, int bufferSize) throws IOException {
 		return copy(reader, writer, bufferSize, null);
 	}
-	
+
 	/**
 	 * 将Reader中的内容复制到Writer中
+	 * 
 	 * @param reader Reader
 	 * @param writer Writer
 	 * @param bufferSize 缓存大小
@@ -72,25 +78,26 @@ public class IoUtil {
 		char[] buffer = new char[bufferSize];
 		long size = 0;
 		int readSize;
-		if(null != streamProgress){
+		if (null != streamProgress) {
 			streamProgress.start();
 		}
 		while ((readSize = reader.read(buffer, 0, bufferSize)) != EOF) {
 			writer.write(buffer, 0, readSize);
 			size += readSize;
 			writer.flush();
-			if(null != streamProgress){
+			if (null != streamProgress) {
 				streamProgress.progress(size);
 			}
 		}
-		if(null != streamProgress){
+		if (null != streamProgress) {
 			streamProgress.finish();
 		}
 		return size;
 	}
-	
+
 	/**
 	 * 拷贝流，使用默认Buffer大小
+	 * 
 	 * @param in 输入流
 	 * @param out 输出流
 	 * @return 传输的byte数
@@ -99,9 +106,10 @@ public class IoUtil {
 	public static long copy(InputStream in, OutputStream out) throws IOException {
 		return copy(in, out, DEFAULT_BUFFER_SIZE);
 	}
-	
+
 	/**
 	 * 拷贝流
+	 * 
 	 * @param in 输入流
 	 * @param out 输出流
 	 * @param bufferSize 缓存大小
@@ -111,9 +119,10 @@ public class IoUtil {
 	public static long copy(InputStream in, OutputStream out, int bufferSize) throws IOException {
 		return copy(in, out, bufferSize, null);
 	}
-	
+
 	/**
 	 * 拷贝流
+	 * 
 	 * @param in 输入流
 	 * @param out 输出流
 	 * @param bufferSize 缓存大小
@@ -122,90 +131,93 @@ public class IoUtil {
 	 * @throws IOException
 	 */
 	public static long copy(InputStream in, OutputStream out, int bufferSize, StreamProgress streamProgress) throws IOException {
-		if(null == in){
+		if (null == in) {
 			throw new NullPointerException("InputStream is null!");
 		}
-		if(null == out){
+		if (null == out) {
 			throw new NullPointerException("OutputStream is null!");
 		}
-		if(bufferSize <= 0){
+		if (bufferSize <= 0) {
 			bufferSize = DEFAULT_BUFFER_SIZE;
 		}
-		
+
 		byte[] buffer = new byte[bufferSize];
 		long size = 0;
-		if(null != streamProgress){
+		if (null != streamProgress) {
 			streamProgress.start();
 		}
 		for (int readSize = -1; (readSize = in.read(buffer)) != EOF;) {
 			out.write(buffer, 0, readSize);
 			size += readSize;
 			out.flush();
-			if(null != streamProgress){
+			if (null != streamProgress) {
 				streamProgress.progress(size);
 			}
 		}
-		if(null != streamProgress){
+		if (null != streamProgress) {
 			streamProgress.finish();
 		}
 		return size;
 	}
-	
+
 	/**
 	 * 拷贝文件流，使用NIO
+	 * 
 	 * @param in 输入
 	 * @param out 输出
 	 * @return 拷贝的字节数
 	 * @throws IOException
 	 */
 	public static long copy(FileInputStream in, FileOutputStream out) throws IOException {
-		if(null == in){
+		if (null == in) {
 			throw new NullPointerException("FileInputStream is null!");
 		}
-		if(null == out){
+		if (null == out) {
 			throw new NullPointerException("FileOutputStream is null!");
 		}
-		
+
 		FileChannel inChannel = in.getChannel();
 		FileChannel outChannel = out.getChannel();
-		
+
 		return inChannel.transferTo(0, inChannel.size(), outChannel);
 	}
-	//-------------------------------------------------------------------------------------- Copy end
-	
+	// -------------------------------------------------------------------------------------- Copy end
+
 	/**
 	 * 获得一个文件读取器
+	 * 
 	 * @param in 输入流
 	 * @param charsetName 字符集名称
 	 * @return BufferedReader对象
 	 * @throws IOException
 	 */
-	public static BufferedReader getReader(InputStream in, String charsetName) throws IOException{
+	public static BufferedReader getReader(InputStream in, String charsetName) throws IOException {
 		return getReader(in, Charset.forName(charsetName));
 	}
-	
+
 	/**
 	 * 获得一个文件读取器
+	 * 
 	 * @param in 输入流
 	 * @param charset 字符集
 	 * @return BufferedReader对象
 	 * @throws IOException
 	 */
-	public static BufferedReader getReader(InputStream in, Charset charset) throws IOException{
-		if(null == in){
+	public static BufferedReader getReader(InputStream in, Charset charset) throws IOException {
+		if (null == in) {
 			return null;
 		}
-		
+
 		InputStreamReader reader = null;
-		if(null == charset) {
+		if (null == charset) {
 			reader = new InputStreamReader(in);
-		}else {
+		} else {
 			reader = new InputStreamReader(in, charset);
 		}
-		
+
 		return new BufferedReader(reader);
 	}
-	
+
 	/**
 	 * 从流中读取bytes
 	 * 
@@ -218,7 +230,7 @@ public class IoUtil {
 		copy(in, out);
 		return out.toByteArray();
 	}
-	
+
 	/**
 	 * 从流中读取内容
 	 * 
@@ -244,7 +256,7 @@ public class IoUtil {
 		FastByteArrayOutputStream out = read(in);
 		return null == charset ? out.toString() : out.toString(charset);
 	}
-	
+
 	/**
 	 * 从流中读取内容，读到输出流中
 	 * 
@@ -257,24 +269,48 @@ public class IoUtil {
 		copy(in, out);
 		return out;
 	}
-	
+
+	/**
+	 * 从流中读取内容，读到输出流中
+	 * 
+	 * @param in 输入流
+	 * @return 输出流
+	 * @throws IOException
+	 */
+	public static <T> T readObj(InputStream in) throws IOException {
+		if (in == null) {
+			throw new IllegalArgumentException("The InputStream must not be null");
+		}
+		ObjectInputStream ois = null;
+		try {
+			ois = new ObjectInputStream(in);
+			@SuppressWarnings("unchecked") // may fail with CCE if serialised form is incorrect
+			final T obj = (T) ois.readObject();
+			return obj;
+		} catch (Exception e) {
+			throw new IOException(e);
+		}
+	}
+
 	/**
 	 * 从Reader中读取String
+	 * 
 	 * @param reader Reader
 	 * @return String
 	 * @throws IOException
 	 */
-	public static String read(Reader reader) throws IOException{
+	public static String read(Reader reader) throws IOException {
 		final StringBuilder builder = StrUtil.builder();
 		final CharBuffer buffer = CharBuffer.allocate(DEFAULT_BUFFER_SIZE);
-		while(-1 != reader.read(buffer)){
+		while (-1 != reader.read(buffer)) {
 			builder.append(buffer.flip().toString());
 		}
 		return builder.toString();
 	}
-	
+
 	/**
 	 * 从FileChannel中读取内容
+	 * 
 	 * @param fileChannel 文件管道
 	 * @param charset 字符集
 	 * @return 内容
@@ -284,7 +320,7 @@ public class IoUtil {
 		final MappedByteBuffer buffer = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0, fileChannel.size()).load();
 		return StrUtil.str(buffer, charset);
 	}
-	
+
 	/**
 	 * 从流中读取内容
 	 * 
@@ -304,30 +340,32 @@ public class IoUtil {
 
 		return collection;
 	}
-	
+
 	/**
 	 * String 转为 流
+	 * 
 	 * @param content 内容
 	 * @param charset 编码
 	 * @return 字节流
 	 */
 	public static ByteArrayInputStream toStream(String content, String charset) {
-		if(content == null) {
+		if (content == null) {
 			return null;
 		}
-		
+
 		byte[] data = null;
 		try {
 			data = StrUtil.isBlank(charset) ? content.getBytes() : content.getBytes(charset);
 		} catch (UnsupportedEncodingException e) {
 			throw new UtilException(StrUtil.format("Invalid charset [{}] !", charset), e);
 		}
-		
+
 		return new ByteArrayInputStream(data);
 	}
-	
+
 	/**
 	 * 将多部分内容写到流中，自动转换为字符串
+	 * 
 	 * @param out 输出流
 	 * @param charset 写出的内容的字符集
 	 * @param isCloseOut 写入完毕是否关闭输出流
@@ -339,34 +377,51 @@ public class IoUtil {
 		try {
 			osw = new OutputStreamWriter(out, charset);
 			for (Object content : contents) {
-				if(content != null) {
+				if (content != null) {
 					osw.write(Conver.toStr(content, StrUtil.EMPTY));
 					osw.flush();
 				}
 			}
 		} catch (Exception e) {
 			throw new IOException("Write content to OutputStream error!", e);
-		}finally {
-			if(isCloseOut) {
+		} finally {
+			if (isCloseOut) {
 				close(osw);
 			}
 		}
 	}
-	
+
 	/**
-	 * 打印内容，调用系统的System.out.println方法
-	 * @param content 内容，会调用toString方法， 当内容中有 {} 表示变量占位符
-	 * @param param 参数
+	 * 将多部分内容写到流中
+	 * 
+	 * @param out 输出流
+	 * @param charset 写出的内容的字符集
+	 * @param isCloseOut 写入完毕是否关闭输出流
+	 * @param contents 写入的内容
+	 * @throws IOException
 	 */
-	public static void echo(Object content, Object... param) {
-		if(content == null) {
-			System.out.println(content);
+	public static void write(OutputStream out, String charset, boolean isCloseOut, Serializable... contents) throws IOException {
+		ObjectOutputStream osw = null;
+		try {
+			osw = out instanceof ObjectOutputStream ? (ObjectOutputStream) out : new ObjectOutputStream(out);
+			for (Object content : contents) {
+				if (content != null) {
+					osw.writeObject(content);
+					osw.flush();
+				}
+			}
+		} catch (Exception e) {
+			throw new IOException("Write content to OutputStream error!", e);
+		} finally {
+			if (isCloseOut) {
+				close(osw);
+			}
 		}
-		System.out.println(StrUtil.format(content.toString(), param));
 	}
-	
+
 	/**
 	 * 关闭
+	 * 
 	 * @param closeable 被关闭的对象
 	 */
 	public static void close(Closeable closeable) {
@@ -376,9 +431,10 @@ public class IoUtil {
 		} catch (Exception e) {
 		}
 	}
-	
+
 	/**
 	 * 关闭
+	 * 
 	 * @param closeable 被关闭的对象
 	 * @since 1.7
 	 */
